components/zu7x31d6c-go/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: zu7x31d6c-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: zu7x31d6c-go 
  name: zu7x31d6c-go
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: zu7x31d6c-go
