components/zu7x31d6c-go/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: zu7x31d6c-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: zu7x31d6c-go 
  name: zu7x31d6c-go
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: zu7x31d6c-go
    weight: 100
